examples/failing/LocalVars.purs
bad = \x -> do
  x = x + 1
  return x
